# sauerstoff

./: Cargo.toml  Makefile  config.yaml
assets/entity_types/: alien_large.yaml  alien_medium.yaml  alien_small.yaml  crystals_large.yaml  crystals_medium.yaml  crystals_small.yaml  engine.yaml  spaceship.yaml  wolfgang.yaml  workbench.yaml
assets/map/: entities.yaml
src/: helpers.rs  main.rs  sprites.rs
src/components/: animation.rs  collision.rs  followcam.rs  interaction.rs  item.rs  mod.rs  player.rs
src/data/: common.rs  entity_types.rs  map.rs  mod.rs
src/resources/: audio.rs  config.rs  map.rs  mod.rs
src/sprites/: mod.rs  wolfgang.rs
src/systems/: animation.rs  camera.rs  input.rs  interaction.rs  item.rs  map.rs  mod.rs  music.rs  player.rs  textures.rs
