[package]
name = "sauerstoff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.6.1", features = ["dynamic", "jpeg"] }
bevy_kira_audio = { version = "0.8.0", features = ["mp3"] }
itertools = "0.10.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
