[package]
name = "sauerstoff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = "debuginfo"

[dependencies]
anyhow = "1"
bresenham = "0.1.1"
bevy_kira_audio = { version = "0.17" }
image = { version = "0.24", default-features = false, features = ["png"] }
itertools = "0.11"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[dependencies.bevy]
version = "0.11"
default-features = false
features = [
    "animation",
    "bevy_asset",
    #"bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_sprite",
    "bevy_text",
    "bevy_winit",
    #"render",
    "png",
    "hdr",
    #"vorbis",
    "x11",
    "filesystem_watcher",
    "jpeg",
]
